# Playwright_test_task-

./: .gitignore  LICENSE
PythonProject/: pyproject.toml  Тест кейсы и теория вероятности
PythonProject/allure-results/: 05fc9612-9299-4b56-8454-7b2b01071ce4-result.json  0813a4c1-6218-4771-9a26-7cdff5fbe447-container.json  101469b9-f77e-4d2c-96af-2fc122ee4833-container.json  1f711b9d-8247-4ffd-8303-2bc2b3fb696b-container.json  23b980ab-a5dc-4da1-a85a-d706b6d2247e-container.json  28e38cac-5e47-4007-9f8e-99084bda7a71-container.json  33ea74a9-ac8e-4456-abb5-fd6811dcbe40-container.json  4935ef2a-be82-4735-bc1c-c42fad3dad64-container.json  5eb81a68-518f-464e-9d84-5f41ef817a00-container.json  6d0dcece-c3d1-4913-bda4-88b2249c8fb3-container.json  7e8c35a3-2991-4d7b-990c-d2696dae1c29-container.json  824551ce-127a-4d7b-a93e-8d068fd8be21-container.json  873d13d1-c435-4906-bcff-0df348354e78-container.json  c372e5e5-a498-4e1d-a5e7-a1315be112b1-container.json  cd19be79-4193-47c6-8f91-19dc58481fb0-container.json  e93fc27f-c3e4-4909-8ffd-08a08ce67145-container.json  e9e3af87-c8b2-4831-8f33-d48de884e28c-container.json  ec52deac-1d73-4f63-9c5e-4726657de034-container.json
PythonProject/data/: browser_data.py
PythonProject/pages/: playwright_home_page.py
PythonProject/tests/: Test Cases.xlsx  test.py
pages/: base_checker.py  base_page.py  page_locators.py
tests/: confest.py
